Cập nhật giao diện

--- a/resources/vars-dark.scss
+++ b/resources/vars-dark.scss
@@ -13,9 +13,9 @@ $color_primary75: #ccc;     // widget
 $color_primary90: #eee;
 $color_primary100: #f8f8f8;
 
-$color_link50: #06d;    // default (title)
-$color_link75: #6bf;    // default
-$color_link100: #49e;   // hover
+$color_link50: #14bda2;    // default (title)
+$color_link75: #10af95;    // default
+$color_link100: #1de7c6;   // hover
 $color_link200: #d83;   // active
 
 $color_pageBg: #222;    // #222 because some elements should be darker than pageBg
