--- a/resources/widgets.scss
+++ b/resources/widgets.scss
@@ -33,7 +33,7 @@
     line-height: 1.4;
     background: rgb(51, 122, 183) none repeat scroll 0 (0% / auto) padding-box border-box;
     background: -webkit-linear-gradient(top, #337ab7 0, #265a88 100%) repeat-x;
-    background: linear-gradient(to bottom, #337ab7 0, #265a88 100%) repeat-x;
+    background: linear-gradient(to bottom, $highlight_blue 0, #065245 100%) repeat-x;
     border-radius: $widget_border_radius;
     padding: 6px 12px;
     display: block;
@@ -44,12 +44,12 @@
     font-size: $base_font_size;
 
     &:hover {
-        background: #265a88;
+        background: $highlight_blue;
     }
 
     &:active {
         border-color: #245580;
-        background: #265a88;
+        background: #01947d;
     }
 
     &.full {
