--- a/resources/base.scss
+++ b/resources/base.scss
@@ -111,7 +111,7 @@ body {
     font-size: $base_font_size;
     line-height: 1.231;
     background: $color_primary5;
-    font-family: "Segoe UI", "Lucida Grande", Arial, sans-serif;
+    font-family: "Lato", "Segoe UI", "Lucida Grande", Arial, sans-serif;
     color: $color_primary100;
     height: 100%;
 }
