--- a/resources/navbar.scss
+++ b/resources/navbar.scss
@@ -63,7 +63,7 @@
     left: 0;
     width: 100%;
     height: 56px;
-    background: #231f20;
+    background: #1e1e1e;
 }
 
 #nav-shadow {
@@ -72,11 +72,11 @@
 }
 
 #nav-container {
-    background: #231f20;
+    background: #1e1e1e;
 
     // opacity: 0.77
     // filter: alpha(opacity=77)
-    height: 100%;
+    height: 41px;
 }
 
 nav {
@@ -85,6 +85,9 @@ nav {
     left: 0;
     right: 0;
     z-index: 500;
+    background: #1e1e1e;
+    border-bottom: 6px solid $highlight_blue;
+    box-shadow: 0 0 5px black;
 
     ul {
         margin: 0 0 0 -5px;
@@ -96,7 +99,7 @@ nav {
             color: #FFF;
             text-transform: uppercase;
             position: relative;
-            font-family: 'Source Sans Pro', sans-serif;
+            font-family: 'Lato', sans-serif;
             &.home-nav-element a {
                 padding: 0;
                 height: 44px;
@@ -112,8 +115,8 @@ nav {
                 text-decoration: none;
                 vertical-align: middle;
                 color: #FFF;
-                padding: 14px 7px;
-                height: 20px;
+                padding: 13px 7px;
+                height: 18px;
                 display: inline-table;
 
                 &:link {
@@ -121,17 +124,13 @@ nav {
                 }
 
                 &:hover {
-                    color: #FFF;
-                    background: rgba(255, 255, 255, 0.25);
-                    margin: 0;
+                    color: $highlight_blue;
                 }
 
                 &.active {
                     color: #FFF;
+                    background: $highlight_blue;
 
-                    border: 5px solid transparent;
-                    border-bottom: 5px solid $highlight_blue;
-                    padding: 9px 2px;
                 }
 
                 .nav-expand {
@@ -145,7 +144,7 @@ nav {
                 left: 5px;
                 display: none;
                 color: #fff;
-                background: #231f20;
+                background: #1e1e1e;
                 margin: 0 !important;
                 box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
 
@@ -236,7 +235,7 @@ nav {
         margin: 0;
         position: fixed;
         top: 36px;
-        background: #231f20;
+        background: #1e1e1e;
         bottom: 0;
         width: 8em;
         left: 0;
