--- a/templates/base.html
+++ b/templates/base.html
@@ -25,10 +25,13 @@
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
     <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
     <link rel="manifest" href="/manifest.json">
-    <meta name="msapplication-TileColor" content="#231F20">
+    <meta name="msapplication-TileColor" content="#1e1e1e">
     <meta name="msapplication-TileImage" content="/mstile-144x144.png">
+    {# fonts import #}
+    <link rel="stylesheet" href="{{ static('font_lato/latofonts.css') }}" type="text/css">
+    <link rel="stylesheet" type="text/css" href="{{ static('font_cm/cmun-serif.css') }}">
     {# Chrome 39 for Android colour #}
-    <meta name="theme-color" content="#231F20">
+    <meta name="theme-color" content="#1e1e1e">
     {% if og_image %}
         <meta property="og:image" content="{{ request.build_absolute_uri(og_image) }}">
     {% else %}
@@ -361,10 +364,9 @@
     <footer>
         <span id="footer-content">
             <br>
-            {{_('proudly powered by %(dmoj)s', dmoj=safe('<a style="color: #808080" href="https://dmoj.ca"><b>DMOJ</b></a>'))}} |
-            {{_('follow us on %(github)s and %(facebook)s', github=safe('<a style="color: #808080" href="https://github.com/VNOI-Admin/OJ"><b>Github</b></a>'), facebook=safe('<a style="color: #808080" href="https://www.facebook.com/vnoi.wiki"><b>Facebook</b></a>'))}}
+            {{_('proudly powered by %(dmoj)s', dmoj=safe('<a style="color: #808080" href="https://dmoj.ca"><b>DMOJ</b></a>'))}} &  <a style="color: #808080" href="https://oj.vnoi.info"><b>VNOJ</b></a>
             {% if misc_config.footer %}
-                {{ misc_config.footer|safe }} |
+                {{ misc_config.footer|safe }}
             {% endif %}
             <form id="set_language" action="{{ url('set_language') }}" method="post" style="display: inline">
                 {% csrf_token %}
