Remove cmun-serif fonts

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
     <meta name="msapplication-TileImage" content="/mstile-144x144.png">
     {# fonts import #}
     <link rel="stylesheet" href="{{ static('font_lato/latofonts.css') }}" type="text/css">
-    <link rel="stylesheet" type="text/css" href="{{ static('font_cm/cmun-serif.css') }}">
+    <!-- <link rel="stylesheet" type="text/css" href="{{ static('font_cm/cmun-serif.css') }}"> -->
     {# Chrome 39 for Android colour #}
     <meta name="theme-color" content="#1e1e1e">
     {% if og_image %}
