--- a/resources/blog.scss
+++ b/resources/blog.scss
@@ -6,19 +6,23 @@
     vertical-align: top;
 
     .post {
-        margin: 0em 0.5em;
-
+        // margin: 0em 0.5em;
+        border: 1px solid #ccc;
+        border-radius: 2px;
+        box-shadow: 2px 2px 4px rgba(0,0,0,0.4);
+        padding: 1.2em;
+        margin-bottom: 1.2em;
         &:first-child {
             margin-top: 1.1em;
         }
 
         &:last-child {
-            border-bottom: none;
+            // border-bottom: none;
         }
 
         .title {
             font-weight: 600;
-            font-size: 1.7em;
+            font-size: 1.4em;
 
             a {
                 color: $color_link50;
@@ -46,7 +50,7 @@
         }
 
         .blog-body {
-            border-left: 4px solid grey;
+            // border-left: 4px solid grey;
             margin: 1em 0;
             padding-left: 1em;
             padding-bottom: 0.25em;
@@ -54,10 +58,10 @@
     }
 
     .meta {
-        margin: 1em 0 1.5em 0;
+        // margin: 1em 0 1.5em 0;
         padding: 0.25em 0.5em;
-        border: 2px solid grey;
-        border-radius: 4px;
+        border-top: 2px solid #ccc;
+        // border-radius: 4px;
     }
 }
 
