--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,11 @@
     {% else %}
         <meta property="og:image" content="{{ request.build_absolute_uri("/logo.png") }}">
     {% endif %}
-    {% block og_title %}{% endblock %}
+    {% block og_title %}
+    <meta property="og:title" content="{{ misc_config.meta_title }}" />
+    {% endblock %}
+
+    
     <meta property="og:site_name" content="{{ SITE_LONG_NAME }}">
     <meta property="og:url"
           content="{{ DMOJ_SCHEME }}://{{ DMOJ_CANONICAL|default(site.domain) }}{{ request.get_full_path() }}">
