--- a/templates/base.html
+++ b/templates/base.html
@@ -41,11 +41,7 @@
     {% block og_title %}
     <meta property="og:title" content="{{ misc_config.meta_title }}" />
     {% endblock %}
-    <meta property="og:type" content="website">
-    <meta property="og:site_name" content="{{ SITE_LONG_NAME }}">
-    <meta property="og:url"
-        content="{{ DMOJ_SCHEME }}://{{ DMOJ_CANONICAL|default(site.domain) }}{{ request.get_full_path() }}">
-    {% block meta %}
+
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta property="twitter:domain" content="{{ DMOJ_CANONICAL }}">
@@ -54,11 +50,11 @@
     <meta name="twitter:title" content="{{ misc_config.meta_title }}">
     <meta name="twitter:description" content="{{ meta_description }}">
     <meta name="twitter:image" content="{{ request.build_absolute_uri(" /logo.png") }}">
+    <meta property="og:site_name" content="{{ SITE_LONG_NAME }}">
+    <meta property="og:url"
+        content="{{ DMOJ_SCHEME }}://{{ DMOJ_CANONICAL|default(site.domain) }}{{ request.get_full_path() }}">
 
-    {% endblock %}
-
-
-
+    {% block meta %}{% endblock %}
     {% if not INLINE_FONTAWESOME %}
     <link rel="stylesheet" href="{{ FONTAWESOME_CSS }}">
     {% endif %}
