--- a/templates/base.html
+++ b/templates/base.html
@@ -37,9 +37,7 @@
     {% else %}
         <meta property="og:image" content="{{ request.build_absolute_uri("/logo.png") }}">
     {% endif %}
-    {% block og_title %}
-    <meta property="og:title" content="{{ misc_config.meta_title }}" />
-    {% endblock %}
+    {% block og_title %} {% endblock %}
 
         <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
