--- a/templates/submission/status.html
+++ b/templates/submission/status.html
@@ -122,3 +122,8 @@
         {% endif %}
     {% endif %}
 {% endblock %}
+{% block bodyend %}
+    {% if REQUIRE_JAX %}
+        {% include "mathjax-load.html" %}
+    {% endif %}
+{% endblock %}
